<resources>
    <string name="app_name">SimpleCalc</string>
    <string name="textview">Oper.1</string>
    <string name="textview2">Oper.2</string>
    <string name="calcola_somma">Somma</string>
    <string name="calcola_prodotto">Prodotto</string>
    <string name="risultato">Risultato</string>
    <string name="calcola_differenza">Differenza</string>
    <string name="quoziente">Quoziente</string>
</resources>